--- a/weather-to-wear-client/src/App.css
+++ b/weather-to-wear-client/src/App.css
@@ -35,6 +35,15 @@ fieldset {
   border: 1px solid #222;
 }
 
+footer {
+  margin: auto;
+  position: absolute;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+}
+
 h1 a {
   text-decoration: none;
   color: grey;
